Darryl-Pilar-Imperialismo.html

--- a/Darryl-Pilar-Imperialismo.html
+++ b/Darryl-Pilar-Imperialismo.html
@@ -3,12 +3,12 @@
 <!DOCTYPE html>
 <head>
     <title>Imperialismo - compito</title>
-    <link rel="icon" type="image/x-icon" href="./Images/icon.ico">
+    <link rel="icon" type="image/x-icon" href="icon.ico">
     <style>
 
         body {
             margin: 0;
-            background-image: url('images/background.jpg');
+            background-image: url('background.jpg');
             background-size: cover;
         }
 
@@ -99,4 +99,5 @@
 
 
 </body>
+
 </html>
