--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <h2>Cos'è?</h2>
 
-    <img src="./Images/imperialismo.jpg">
+    <img src="imperialismo.jpg">
     <p>
         L'imperialismo è la volontà di uno Stato di estendere il proprio dominio (politico, economico e culturale) su altri territori al fine di realizzare un impero.
     </p>
@@ -101,4 +101,5 @@
 </body>
 
 </html>
+
 
